--- a/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
+++ b/ConferencesBook/the-2nd-a3-pharmacometrics-symposium.html
@@ -25,7 +25,7 @@
 
 <meta name="author" content="Sungpil Han, M.D./Ph.D.">
 
-<meta name="date" content="2016-10-19">
+<meta name="date" content="2016-10-24">
 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -39,7 +39,7 @@ MathJax.Hub.Config({
   
   
 <link rel="prev" href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html">
-<link rel="next" href="reference.html">
+<link rel="next" href="asrm-2016.html">
 
 <script src="libs/jquery/jquery.min.js"></script>
 <link href="libs/gitbook/css/style.css" rel="stylesheet" />
@@ -217,7 +217,41 @@ MathJax.Hub.Config({
 <li class="chapter" data-level="14.3.4" data-path="the-2nd-a3-pharmacometrics-symposium.html"><a href="the-2nd-a3-pharmacometrics-symposium.html#recent-examples-of-impact-of-pharmacometrics-in-decision-making"><i class="fa fa-check"></i><b>14.3.4</b> Recent examples of impact of pharmacometrics in decision making</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="15" data-path="reference.html"><a href="reference.html"><i class="fa fa-check"></i><b>15</b> Reference</a></li>
+<li class="chapter" data-level="15" data-path="asrm-2016.html"><a href="asrm-2016.html"><i class="fa fa-check"></i><b>15</b> ASRM 2016</a><ul>
+<li class="chapter" data-level="15.1" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-lectures"><i class="fa fa-check"></i><b>15.1</b> Plenary lectures</a><ul>
+<li class="chapter" data-level="15.1.1" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-2"><i class="fa fa-check"></i><b>15.1.1</b> Plenary 2</a></li>
+<li class="chapter" data-level="15.1.2" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-lecture-3-the-importance-of-long-acting-reversible-contraception-larc"><i class="fa fa-check"></i><b>15.1.2</b> Plenary Lecture 3 : The importance of Long-acting reversible contraception (LARC)</a></li>
+<li class="chapter" data-level="15.1.3" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-4"><i class="fa fa-check"></i><b>15.1.3</b> Plenary 4</a></li>
+<li class="chapter" data-level="15.1.4" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-5"><i class="fa fa-check"></i><b>15.1.4</b> Plenary 5</a></li>
+<li class="chapter" data-level="15.1.5" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-6-update-on-congenital-adrenal-hyperplasia"><i class="fa fa-check"></i><b>15.1.5</b> Plenary 6 Update on Congenital Adrenal Hyperplasia</a></li>
+<li class="chapter" data-level="15.1.6" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-7---why-parents-matter-epigenetically-genomic-imprinting-in-health-and-disease"><i class="fa fa-check"></i><b>15.1.6</b> Plenary 7 - Why Parents Matter (Epigenetically): Genomic Imprinting in Health and Disease</a></li>
+<li class="chapter" data-level="15.1.7" data-path="asrm-2016.html"><a href="asrm-2016.html#plenary-8-aua-bruce-stewart-memorial-lecture-the-futures-of-malereproductive-medicine"><i class="fa fa-check"></i><b>15.1.7</b> Plenary 8: AUA Bruce Stewart Memorial Lecture: The Futures of (Male(Reproductive)) Medicine</a></li>
+</ul></li>
+<li class="chapter" data-level="15.2" data-path="asrm-2016.html"><a href="asrm-2016.html#prize-oral"><i class="fa fa-check"></i><b>15.2</b> Prize Oral</a><ul>
+<li class="chapter" data-level="15.2.1" data-path="asrm-2016.html"><a href="asrm-2016.html#mtor-inhibitors-preserve-fertility-in-a-murine-model-a-novel-pharmacologic-approach-to-fertility-preservation-during-gonadotoxic-chemotherapy"><i class="fa fa-check"></i><b>15.2.1</b> mTOR inhibitors preserve fertility in a murine model : a novel pharmacologic approach to fertility preservation during gonadotoxic chemotherapy</a></li>
+<li class="chapter" data-level="15.2.2" data-path="asrm-2016.html"><a href="asrm-2016.html#verification-of-accuracy-safety-for-ovarian-reserve-assessment-with-optical-coherence-tomography-using-mouse-ovary"><i class="fa fa-check"></i><b>15.2.2</b> Verification of accuracy &amp; safety for ovarian reserve assessment with optical coherence tomography using mouse ovary</a></li>
+<li class="chapter" data-level="15.2.3" data-path="asrm-2016.html"><a href="asrm-2016.html#o-6-randomized-controlled-trial-of-low-5-vs.-ultralow-2-oxygen-tension-for-in-vitro-development-of-human-embryos"><i class="fa fa-check"></i><b>15.2.3</b> O-6 RANDOMIZED CONTROLLED TRIAL OF LOW (5%) VS. ULTRALOW (2%) OXYGEN TENSION FOR IN VITRO DEVELOPMENT OF HUMAN EMBRYOS</a></li>
+</ul></li>
+<li class="chapter" data-level="15.3" data-path="asrm-2016.html"><a href="asrm-2016.html#symposium-overview-of-food-and-drug-administration-fda-regulations-of-products-used-to-treat-reproductive-conditions-in-women"><i class="fa fa-check"></i><b>15.3</b> Symposium : Overview of Food and Drug Administration (FDA) Regulations of Products Used to Treat Reproductive Conditions in Women</a><ul>
+<li class="chapter" data-level="15.3.1" data-path="asrm-2016.html"><a href="asrm-2016.html#richard-d.-mcfarland-m.d.-ph.d."><i class="fa fa-check"></i><b>15.3.1</b> Richard D. McFarland, M.D., Ph.D.</a></li>
+<li class="chapter" data-level="15.3.2" data-path="asrm-2016.html"><a href="asrm-2016.html#rhonda---cder-drug-review-process"><i class="fa fa-check"></i><b>15.3.2</b> Rhonda - CDER Drug review process</a></li>
+<li class="chapter" data-level="15.3.3" data-path="asrm-2016.html"><a href="asrm-2016.html#cdrh-center-for-devices-and-radiological-health"><i class="fa fa-check"></i><b>15.3.3</b> CDRH (Center for Devices and Radiological Health)</a></li>
+<li class="chapter" data-level="15.3.4" data-path="asrm-2016.html"><a href="asrm-2016.html#endometriosis-tuesday-expo-theater"><i class="fa fa-check"></i><b>15.3.4</b> Endometriosis, Tuesday EXPO theater</a></li>
+</ul></li>
+<li class="chapter" data-level="15.4" data-path="asrm-2016.html"><a href="asrm-2016.html#scientific-congress-prize-paper-session-2"><i class="fa fa-check"></i><b>15.4</b> Scientific Congress Prize Paper Session 2</a><ul>
+<li class="chapter" data-level="15.4.1" data-path="asrm-2016.html"><a href="asrm-2016.html#o-91-preovulatory-protein-restriction-ppr-disrupted-amino-acid-aa-kinetics-and-mitochondrial-structure-and-function-in-the-rat-oocyte"><i class="fa fa-check"></i><b>15.4.1</b> O-91 PREOVULATORY PROTEIN RESTRICTION (PPR): DISRUPTED AMINO ACID (AA) KINETICS AND MITOCHONDRIAL STRUCTURE AND FUNCTION IN THE RAT OOCYTE</a></li>
+<li class="chapter" data-level="15.4.2" data-path="asrm-2016.html"><a href="asrm-2016.html#o-92-effects-of-resveratrol-on-polycystic-ovary-syndrome"><i class="fa fa-check"></i><b>15.4.2</b> O-92 EFFECTS OF RESVERATROL ON POLYCYSTIC OVARY SYNDROME</a></li>
+<li class="chapter" data-level="15.4.3" data-path="asrm-2016.html"><a href="asrm-2016.html#o-93-genome-wide-dna-methylation-changes-in-mouse-zygotes-associated-with-superovulation"><i class="fa fa-check"></i><b>15.4.3</b> O-93 GENOME-WIDE DNA METHYLATION CHANGES IN MOUSE ZYGOTES ASSOCIATED WITH SUPEROVULATION</a></li>
+<li class="chapter" data-level="15.4.4" data-path="asrm-2016.html"><a href="asrm-2016.html#o-94-can-we-expect-to-improve-age-at-menopause-predictions-with-repeated-amh-measurements"><i class="fa fa-check"></i><b>15.4.4</b> O-94 CAN WE EXPECT TO IMPROVE AGE AT MENOPAUSE PREDICTIONS WITH REPEATED AMH MEASUREMENTS?</a></li>
+</ul></li>
+<li class="chapter" data-level="15.5" data-path="asrm-2016.html"><a href="asrm-2016.html#oral-presentation"><i class="fa fa-check"></i><b>15.5</b> Oral Presentation</a><ul>
+<li class="chapter" data-level="15.5.1" data-path="asrm-2016.html"><a href="asrm-2016.html#o-229-the-impact-of-elagolix-on-quality-of-life-in-women-with-endometriosis-associated-pain-results-from-two-randomized-placebo-controlled-studies-using-the-endometriosis-health-profile-questionnaire-hugh-taylor"><i class="fa fa-check"></i><b>15.5.1</b> O-229 THE IMPACT OF ELAGOLIX ON QUALITY OF LIFE IN WOMEN WITH ENDOMETRIOSIS-ASSOCIATED PAIN: RESULTS FROM TWO RANDOMIZED, PLACEBO-CONTROLLED STUDIES USING THE ENDOMETRIOSIS HEALTH PROFILE QUESTIONNAIRE (Hugh Taylor)</a></li>
+<li class="chapter" data-level="15.5.2" data-path="asrm-2016.html"><a href="asrm-2016.html#o-230-direct-and-indirect-costs-associated-with-endometriosis-related-surgery-among-employed-women-in-the-us"><i class="fa fa-check"></i><b>15.5.2</b> O-230 DIRECT AND INDIRECT COSTS ASSOCIATED WITH ENDOMETRIOSIS-RELATED SURGERY AMONG EMPLOYED WOMEN IN THE US</a></li>
+<li class="chapter" data-level="15.5.3" data-path="asrm-2016.html"><a href="asrm-2016.html#o-231-new-procedure-for-the-endometriosis-diagnosis"><i class="fa fa-check"></i><b>15.5.3</b> O-231 NEW PROCEDURE FOR THE ENDOMETRIOSIS DIAGNOSIS</a></li>
+<li class="chapter" data-level="15.5.4" data-path="asrm-2016.html"><a href="asrm-2016.html#o-232-elagolix-on-endometrium"><i class="fa fa-check"></i><b>15.5.4</b> O-232 Elagolix on endometrium</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="16" data-path="reference.html"><a href="reference.html"><i class="fa fa-check"></i><b>16</b> Reference</a></li>
 <li class="divider"></li>
 <li><a href="http://shanmdphd.github.io">Back to shanmdphd.github.io</a></li>
 
@@ -455,7 +489,7 @@ MathJax.Hub.Config({
         </div>
       </div>
 <a href="-clinical-research-science-expert-course-for-cutting-edge-drug-development.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="reference.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
+<a href="asrm-2016.html" class="navigation navigation-next " aria-label="Next page""><i class="fa fa-angle-right"></i></a>
 
 <script src="libs/gitbook/js/app.min.js"></script>
 <script src="libs/gitbook/js/lunr.js"></script>
