--- a/ConferencesBook/asrm-2016.html
+++ b/ConferencesBook/asrm-2016.html
@@ -280,7 +280,13 @@ MathJax.Hub.Config({
 <h2><span class="header-section-number">15.1</span> Plenary lectures</h2>
 <div id="plenary-2" class="section level3">
 <h3><span class="header-section-number">15.1.1</span> Plenary 2</h3>
-<p>Camran Nezhat, M.D. Lectureship in Innovations in Medicine - speaker: Diana W. Bianchi, M.D. Tufts University School of Medicine (NICHD director, soon-to-be) - Maternal Plasma DNA Sequencing - Noninvasive prenatal genetic testing using analysis of cell-free DNA in maternal plasma has translated to and transformed clinical care. - importance of positive and negative predictive values</p>
+<ul>
+<li>speaker: Camran Nezhat, M.D. Lectureship in Innovations in Medicine</li>
+<li>speaker: Diana W. Bianchi, M.D. Tufts University School of Medicine (NICHD director, soon-to-be)</li>
+<li>Maternal Plasma DNA Sequencing</li>
+<li>Noninvasive prenatal genetic testing using analysis of cell-free DNA in maternal plasma has translated to and transformed clinical care.</li>
+<li>importance of positive and negative predictive values</li>
+</ul>
 </div>
 <div id="plenary-lecture-3-the-importance-of-long-acting-reversible-contraception-larc" class="section level3">
 <h3><span class="header-section-number">15.1.2</span> Plenary Lecture 3 : The importance of Long-acting reversible contraception (LARC)</h3>
