--- a/ConferencesBook/asrm-2016.html
+++ b/ConferencesBook/asrm-2016.html
@@ -274,8 +274,12 @@ MathJax.Hub.Config({
             <section class="normal" id="section-">
 <div id="asrm-2016" class="section level1">
 <h1><span class="header-section-number">Chapter 15</span> ASRM 2016</h1>
-<p>ASRM 2016은 미국생식의학회에서 주최하는 가장 큰 학회입니다.</p>
+<p>ASRM 2016은 미국생식의학회에서 주최하는 생식의학 관련 가장 큰 학회입니다.</p>
 <p><a href="https://drive.google.com/open?id=0B7BS_yg2ja1EeUFxWkxFWVU3dEE" class="uri">https://drive.google.com/open?id=0B7BS_yg2ja1EeUFxWkxFWVU3dEE</a></p>
+<div class="figure">
+<img src="https://lh3.googleusercontent.com/HE0f-tEFU59NQS-fFg5bt5BQXJ1mGOoSzMaTMfODF8QU1sro-2hkkfh72F8UqjV4YUGLnhHlrZ_ZT_TNkRIu1w=w1280-h608-rw" />
+
+</div>
 <div id="plenary-lectures" class="section level2">
 <h2><span class="header-section-number">15.1</span> Plenary lectures</h2>
 <div id="plenary-2" class="section level3">
